[gd_scene load_steps=6 format=2]

[ext_resource path="res://LogoSprites/QQIT.png" type="Texture" id=1]
[ext_resource path="res://LogoSprites/Studios.png" type="Texture" id=2]
[ext_resource path="res://OST/IntroAndMenu/PCEOMON_intro.ogg" type="AudioStream" id=3]
[ext_resource path="res://Title/Intro.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "QAnimation"
length = 21.0
tracks/0/type = "value"
tracks/0/path = NodePath("Q:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.9, 3, 3.5, 8, 11, 18, 19 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IT:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 8, 11, 18, 19 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.00784314, 0, 0, 1 ), Color( 0.00784314, 0, 0, 0 ), Color( 0.00784314, 0, 0, 0 ), Color( 0.00784314, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("T:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3.9, 4, 4.5, 8, 11, 18, 19 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Studios:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 11, 15, 18, 19 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Logo/Studios:margin_top")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 11, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 280, 255.0 ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lightning" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QQIT" type="TextureRect" parent="Logo"]
margin_top = 195.0
margin_right = 640.0
margin_bottom = 245.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Studios" type="TextureRect" parent="Logo"]
margin_top = 255.0
margin_right = 640.0
margin_bottom = 285.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Q" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 218.0
margin_top = 200.0
margin_right = -375.0
margin_bottom = -239.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IT" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 279.0
margin_top = 199.0
margin_right = -282.0
margin_bottom = -239.0
color = Color( 0.00784314, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 375.0
margin_top = 198.0
margin_right = -211.0
margin_bottom = -237.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Studios" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 265.0
margin_top = 256.0
margin_right = -254.0
margin_bottom = -170.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoAnimation" type="AnimationPlayer" parent="."]
anims/QAnimation = SubResource( 1 )

[node name="IntroMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="animation_finished" from="LogoAnimation" to="." method="_on_LogoAnimation_animation_finished"]
